Added reading filters from the config file

--- a/dots.config
+++ b/dots.config
@@ -16,7 +16,7 @@ keys_to_not_split:
 
 // Row filters
 // Available filters:
-//  - !isEmpty
+//  - !empty
 //  - !eq
 //  - !prefix
 //  - !suffix
@@ -25,7 +25,7 @@ keys_to_not_split:
 //  - key
 //  - comment
 filters:
-	key !isEmpty
+	key !empty
 	comment !eq "для WP"
 	key !prefix "windows"
 	key !suffix "wp"
