--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-ConvertLocalizationToDots.xcodeproj/xcuserdata
-Pods
-ConvertLocalizationToDots.xcworkspace/xcuserdata
+
+.build
+ConvertLocalizationToDots.xcodeproj
